# 15m

./: .gitignore  README.md  index.html
.github/workflows/: web.yml
assets/: backend_bg-09fc1d5b.wasm  backend_bg-5b5b0103.wasm  backend_bg-721f55ff.wasm  backend_bg-7a02c94e.wasm  backend_bg-a7a9dff9.wasm  backend_bg-b35f0693.wasm  backend_bg-c448a38b.wasm  backend_bg-ccf4a984.wasm  backend_bg.wasm  index-12172eef.css  index-1ba8b7e4.css  index-242d9d16.css  index-4f769499.css  index-53ceae83.css  index-6693fa4f.css  index-78fdc93e.css  index-7ee7b6ff.css  index-89407cf2.css  index-937afe8b.css  index-a0ba6e1a.css  index-a3ac83a0.css  index-c6331856.css  main-061f9ce8.js  main-081d1f5c.js  main-0d1c049f.js  main-1295fa6a.js  main-14b81074.js  main-197a31eb.js  main-1b95c277.js  main-1c35fdec.js  main-1cd7e9df.js  main-1d137dd6.js  main-1d698b2f.js  main-20d4871c.js  main-21af6fb6.js  main-2431d67e.js  main-2445943b.js  main-24b0cfe3.js  main-24dd09e2.js  main-282d271a.js  (+194 more)
backend/: Cargo.toml
backend/benches/: pt_routing.rs
backend/src/: amenity.rs  buffer.rs  costs.rs  graph.rs  isochrone.rs  lib.rs  main.rs  priority_queue.rs  route.rs  score.rs  score_cycle_parking.rs  scrape.rs  timer.rs  transit_route.rs  zone.rs
backend/src/graph/: costs.rs  isochrone.rs  mod.rs  route.rs  scrape.rs  snap.rs  transit_route.rs
backend/src/gtfs/: fgb.rs  gmd.rs  ids.rs  mod.rs  scrape.rs
cli/: Cargo.toml
cli/src/: main.rs
data_prep/: population.sh
doc/: crates.js  help.html  search-index.js  settings.html  src-files.js
doc/graph/: all.html  enum.Direction.html  enum.GtfsSource.html  enum.Mode.html  enum.PathStep.html  index.html  sidebar-items.js  struct.Graph.html  struct.GtfsModel.html  struct.Intersection.html  struct.IntersectionID.html  struct.Position.html  struct.ProfileID.html  struct.Road.html  struct.RoadID.html  struct.Route.html  struct.Router.html  struct.Timer.html  type.EdgeLocation.html
doc/graph/gtfs/: struct.GtfsModel.html
doc/graph/route/: struct.Route.html  struct.Router.html
doc/graph/snap/: fn.score_similarity.html  index.html  sidebar-items.js
doc/graph/timer/: struct.Timer.html
doc/search.desc/graph/: graph-desc-0-.js
doc/search.index/: 028e1f93cc8c.js  0293e316d243.js  031d6c625f25.js  04d5b85f86.js  0709786e57.js  07a551b27d87.js  09ed9c51f0e4.js  0b11b32d8007.js  0b7ade73fcf8.js  0c506bba00ad.js  0cb1f5b7e9da.js  0e0c952bef21.js  0e9a8e712b.js  10d19c5329e8.js  115de94fde4b.js  16bc1c66cf5e.js  17583be4d3c6.js  19e2eb8b3985.js  1ab2e62a25d8.js  1b1bc5026107.js  1b87202a203f.js  1d0068153cca.js  210c81e022ac.js  22432c9fffed.js  224d13835bb6.js  234c417017e0.js  236e46cf3ed8.js  242e17d939.js  2578d543b819.js  261dae54a328.js  2693fa3d11db.js  2a58f4e432.js  2c19f4088bd2.js  2c1dd2479259.js  2ce3e73e3f45.js  2d2229b0f147.js  2d6bf9a7fda5.js  2f0c4ebbc8a9.js  318dc3062ca5.js  35863db8a2.js  (+51 more)
doc/search.index/crateNames/: cd59e5e0da11.js
doc/search.index/desc/: 090a6d1c00fe.js  8580aa67e7b8.js  f9926dbd0682.js
doc/search.index/entry/: 008e2add794c.js  211c31a1209f.js  2f16838fd17d.js  511ffd11e3a4.js  907ec82f4cfc.js
doc/search.index/function/: 005bc3bd7c6a.js  188811bdb96f.js  a323d7443be6.js  f2b96169c019.js
doc/search.index/generic_inverted_index/: 630510dab71d.js  96ad1c8755b4.js  c59ca7537efb.js  e9bf8aea4766.js
doc/search.index/name/: 43cd87d96ff2.js  4410fa847dba.js  51b634f48860.js  605c47b6d81e.js
doc/search.index/normalizedName/: 41505822fdaa.js  4c8eb47dec.js  86aa4fe98561.js  bafbf2a5484e.js
doc/search.index/path/: a3a79a8580f1.js  bee10c5e2967.js  d8867c359f.js
doc/search.index/type/: 21e809c78bff.js  c235d1bb96fc.js  e67b1fe95fe4.js  ffd6ad2baf.js
doc/src/graph/: costs.rs.html  create.rs.html  isochrone.rs.html  lib.rs.html  route.rs.html  scrape.rs.html  snap.rs.html  timer.rs.html  transit_route.rs.html
doc/src/graph/gtfs/: gmd.rs.html  ids.rs.html  mod.rs.html  scrape.rs.html
doc/trait.impl/core/clone/: trait.Clone.js
doc/trait.impl/core/cmp/: trait.Eq.js  trait.Ord.js  trait.PartialEq.js  trait.PartialOrd.js
doc/trait.impl/core/fmt/: trait.Debug.js
doc/trait.impl/core/hash/: trait.Hash.js
doc/trait.impl/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js  trait.UnsafeUnpin.js
doc/trait.impl/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
doc/trait.impl/enum_map/internal/: trait.Enum.js  trait.EnumArray.js
doc/trait.impl/serde/de/: trait.Deserialize.js
doc/trait.impl/serde/ser/: trait.Serialize.js
doc/trait.impl/serde_core/de/: trait.Deserialize.js
doc/trait.impl/serde_core/ser/: trait.Serialize.js
doc/type.impl/rstar/primitives/geom_with_data/: struct.GeomWithData.js
graph/: Cargo.toml
graph/src/: costs.rs  create.rs  isochrone.rs  lib.rs  muv_profiles.rs  route.rs  scrape.rs  snap.rs  timer.rs  transit_route.rs
graph/src/gtfs/: gmd.rs  ids.rs  mod.rs  scrape.rs
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: About.svelte  AmenityLayer.svelte  AmenityList.svelte  App.svelte  BufferLayer.svelte  BufferRouteMode.svelte  CoverageMode.svelte  DebugMode.svelte  DebugRouteMode.svelte  IsochroneMode.svelte  NetworkLayer.svelte  PickTravelMode.svelte  RouteMode.svelte  ScoreMode.svelte  StopsLayer.svelte  UploadRouteMode.svelte  colors.ts  stores.ts  worker.ts
web/src/common/: AmenityLayer.svelte  AmenityList.svelte  Layout.svelte  NavBar.svelte  OverpassSelector.svelte  PickAmenityKinds.svelte  PickProfile.svelte  PickTravelMode.svelte  PopulationLayer.svelte  StopsLayer.svelte  index.ts
web/src/title/: Loading.svelte  MapLoader.svelte  TitleMode.svelte
