[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.82"
bincode = "1.3.3"
console_error_panic_hook = "0.1.6"
console_log = "1.0.0"
contour = "0.13.1"
chrono = { version = "0.4.33", default-features = false, features = ["serde"] }
csv = "1.3.0"
enum-map = { version = "2.7.3", features = ["serde"] }
fast_paths = "1.0.0"
futures-util = { version ="0.3.30", default-features = false }
geo = "0.28.0"
geojson = { git = "https://github.com/georust/geojson", features = ["geo-types"] }
geomedea = { git = "https://github.com/michaelkirk/geomedea", default-features = false }
geozero = { version = "0.13.0", default-features = false, features = ["with-geo"] }
itertools = "0.13.0"
js-sys = "0.3.69"
log = "0.4.20"
muv-osm = { git = "https://gitlab.com/LeLuxNet/Muv", features = ["lanes"] }
osm-reader = { git = "https://github.com/a-b-street/osm-reader", features = ["serde"] }
rstar = { version = "0.12.0", features = ["serde"] }
serde = "1.0.188"
serde_json = "1.0.105"
serde-wasm-bindgen = "0.6.0"
simple_logger = { version = "5.0.0", default-features = false }
utils = { git = "https://github.com/a-b-street/utils", features = ["serde"] }
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.42"
web-sys = { version = "0.3.64", features = ["console"] }
web-time = "1.1.0"
flatgeobuf = "4.3.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
geomedea = { git = "https://github.com/michaelkirk/geomedea" }
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread"] }

# For local development, build dependencies in release mode once, but otherwise
# use dev profile and avoid wasm-opt.
[profile.dev.package."*"]
opt-level = 3

[dev-dependencies]
criterion = { version = "0.3", features = ["html_reports"] }
rand = "0.8.5"
rand_xorshift = "0.3.0"

[[bench]]
name = "pt_routing"
harness = false
