[package]
name = "graph"
version = "0.1.0"
edition = "2021"

[features]
gtfs = ["dep:geomedea"]
muv = ["dep:muv-osm"]

[dependencies]
anyhow = "1.0.82"
chrono = { version = "0.4.33", default-features = false, features = ["serde"] }
csv = "1.3.0"
fast_paths = "1.0.0"
futures-util = { version ="0.3.30", default-features = false }
geo = "0.29.1"
geojson = { git = "https://github.com/georust/geojson", features = ["geo-types"] }
itertools = "0.13.0"
js-sys = "0.3.69"
log = "0.4.20"
muv-osm = { git = "https://gitlab.com/LeLuxNet/Muv", features = ["lanes"], optional = true }
osm-reader = { git = "https://github.com/a-b-street/osm-reader", features = ["serde"] }
rstar = { version = "0.12.0", features = ["serde"] }
serde = "1.0.188"
serde_json = "1.0.105"
utils = { git = "https://github.com/a-b-street/utils", features = ["serde"] }
wasm-bindgen = "0.2.87"
web-time = "1.1.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
geomedea = { git = "https://github.com/michaelkirk/geomedea", features = ["writer"], optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
geomedea = { git = "https://github.com/michaelkirk/geomedea", default-features = false, optional = true }
